[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytunnel"
version = "1.0.0"
description = "PyTunnel - Python LocalTunnel"
dependencies = [
    "aiohttp>=3.8.0"
]

[tool.poetry]
name = "pytunnel"
version = "1.0.0"
description = "PyTunnel - Python LocalTunnel"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
